# citrius

./: .clang-format  AGENTS.md  CLAUDE.md  CMakeLists.txt  benchmark.bat  benchmark.sh  build.bat  build.sh  lint.bat  test.bat  test.sh
benchmarks/: cuda_elementwise_benchmark.cu  cuda_matmul_benchmark.cu  matmul_benchmark.cpp  operations_benchmark.cpp  operations_benchmark.html  qwen3_decoding_benchmark.cpp  run_qwen.py
docs/: PLAN.md  cuda-matmul-kernel.html  fusion.md  history.md  tensor_design.md
examples/: custom_module.cpp  example_utils.h  operations.cpp
include/: citrius.h  cpu_device.h  cpu_storage.h  cuda_device.h  cuda_storage.h  device.h  exceptions.h  indexing_operations.h  metal_device.h  metal_storage.h  operations.h  reduction_operations.h  safetensors.h  shape_operations.h  storage.h  tensor.h  tensor_factory.h  tensor_utils.h  types.h
include/impl/: batched_matmul_layout.h  cpu_device.h  cpu_storage.h  cublas_cuda_device.h  cuda_allocation.h  cuda_context.h  cuda_device.h  cuda_matmul_layout.h  cuda_storage.h  cutlass_cuda_device.h  device.h  metal_context.h  metal_device.h  metal_storage.h  multi_thread_cpu_device.h  storage.h  tensor_factory.h
include/models/: qwen3.h  qwen3_tokenizer.h
include/nn/: dropout.h  embedding.h  feed_forward.h  functional.h  layer_norm.h  linear.h  module.h  module_list.h  multi_head_attention.h  transformer_block.h
src/: cpu_device.cpp  cpu_storage.cpp  cublas_cuda_device.cu  cuda_device.cu  cuda_storage.cu  indexing_operations.cpp  metal_device.mm  metal_storage.mm  operations.cpp  reduction_operations.cpp  safetensors.cpp  shape_operations.cpp  tensor.cpp  tensor_factory.cpp  types.cpp
src/devices/cpu/: cpu_device.cpp  cpu_storage.cpp  multi_thread_cpu_device.cpp
src/devices/cuda/: cublas_cuda_device.cu  cuda_allocation.cu  cuda_context.cu  cuda_device.cu  cuda_storage.cu  cutlass_cuda_device.cu
src/devices/metal/: metal_context.h  metal_context.mm  metal_device.mm  metal_storage.mm
src/models/: qwen3.cpp  qwen3_tokenizer.cpp
src/nn/: dropout.cpp  embedding.cpp  feed_forward.cpp  functional.cpp  layer_norm.cpp  linear.cpp  module.cpp  module_list.cpp  multi_head_attention.cpp  transformer_block.cpp
tests/: cpu_device_test.cpp  cuda_device_test.cpp  device_nn_conformance_test.cpp  device_operation_conformance_test.cpp  metal_device_test.cpp  operations_test.cpp  reduction_operations_test.cpp  shape_operations_test.cpp  tensor_test.cpp  tensor_utils_test.cpp
tests/devices/cpu/: cpu_device_test.cpp
tests/devices/cuda/: cuda_device_test.cpp
tests/devices/metal/: metal_device_test.cpp
tests/models/: qwen3_test.cpp  qwen3_tokenizer_test.cpp
tests/nn/: container_test.cpp  embedding_test.cpp  feed_forward_test.cpp  functional_test.cpp  layer_norm_test.cpp  linear_test.cpp  module_test.cpp  multi_head_attention_test.cpp  transformer_block_test.cpp
tools/: decoder_chat.cpp
